--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="container">
+            <div class="header">Header Logo</div>
+            <ul class="nav">
+                <li>
+                    <a href="#">Header link one</a>
+                </li>
+                <li>
+                    <a href="#">Header link two</a>
+                </li>
+                <li>
+                    <a href="#">HEader link three</a>
+                </li>
+            </ul>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
