fix:delete extra div tag

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
                     <a href="#">Header link two</a>
                 </li>
                 <li>
-                    <a href="#">HEader link three</a>
+                    <a href="#">Header link three</a>
                 </li>
             </ul>
-            </div>
         </div>
     </nav>
 </body>
