feat:add a header tag and change names in navbar

--- a/index.html
+++ b/index.html
@@ -9,19 +9,30 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <div class="header">Header Logo</div>
+            <div class="logo"> Logo</div>
             <ul class="nav">
                 <li>
-                    <a href="#">Header link one</a>
+                    <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Header link two</a>
+                    <a href="#">About</a>
                 </li>
                 <li>
-                    <a href="#">Header link three</a>
+                    <a href="#">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
+    <header class="header">
+        <div class="container">
+            <h1>
+                This website is awesome
+            </h1>
+            <p>
+                This website has a some subtext under 
+            </p>
+        </div>
+    </header>
+   
 </body>
 </html>
