feat:add button and image to header

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                 This website is awesome
             </h1>
             <p>
-                This website has a some subtext under 
+                This website has a some subtext under here that goes under the main title. It's a smaller font and is lower contrast
             </p>
+            <button>Sign Up</button>
+            <img src="./images/birds.jpg" alt="Image of birds flying in air" width="500">
         </div>
     </header>
    
