feat:add the section after header

--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
             <img src="./images/birds.jpg" alt="Image of birds flying in air" width="500">
         </div>
     </header>
-   
+   <section class="info">
+        <div class="container">
+            <div class="title">Some Random Information</div>
+            <div class="blocks">
+                <div class="card">
+                    <img src="./images/eagle.jpg" alt="Image of an eagle" width="200">
+                    <div class="fact">Bald eagles can see four to five times farther than humans.</div>
+                </div>
+                <div class="card">
+                    <img src="./images/kingfisher.jpg" alt="Image of a kingfisher" width="200">
+                    <div class="fact">Kingfishers can dive into water at high speed without making a splash!</div>
+                </div>
+                <div class="card">
+                    <img src="./images/peacock.jpg" alt="Image of a peacock" width="200">
+                    <div class="fact">Peacocks don't have blue pigment in their feathers!</div>
+                </div>
+                <div class="card">
+                    <img src="./images/penguins.jpg" alt="Image of penguins" width="200">
+                    <div class="fact">Penguins propose with pebbles!</div>
+                </div>
+            </div>
+        </div>
+   </section>
 </body>
 </html>
