feat:add quote section

--- a/index.html
+++ b/index.html
@@ -58,5 +58,11 @@
             </div>
         </div>
    </section>
+   <section class="quote">
+        <div class="container">
+            <div class="sentence">"The reason birds can fly and we can't is simply because they have perfect faith, for to have faith is to have wings."</div>
+            <div class="quoter">— J.M. Barrie, author of Peter Pan</div>
+        </div>
+   </section>
 </body>
 </html>
