feat:add sign up section and footer

--- a/index.html
+++ b/index.html
@@ -64,5 +64,17 @@
             <div class="quoter">— J.M. Barrie, author of Peter Pan</div>
         </div>
    </section>
+   <section class="signup">
+        <div class="container">
+            <div class="subhead">Call to action! It's time!</div>
+            <div class="subtext">Sign up for our product by clicking the button right over there</div>
+            <button>Sign up</button>
+        </div>
+   </section>
+   <footer class="footer">
+        <div class="container">
+            <div class="copyright">Copyright © The Odin Project 2021</div>
+        </div>
+   </footer>
 </body>
 </html>
