--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
    </section>
    <section class="quote">
         <div class="container">
-            <div class="sentence">"The reason birds can fly and we can't is simply because they have perfect faith, for to have faith is to have wings."</div>
+            <div class="sentence"><em>"The reason birds can fly and we can't is simply because they have perfect faith, for to have faith is to have wings."</em></div>
             <div class="quoter">— J.M. Barrie, author of Peter Pan</div>
         </div>
    </section>
