feat:change .container max-width and auto margin
changed .container so that it goes in the middle, added basic background colors and font changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1>
                 This website is awesome
             </h1>
-            <p>
+            <p class="para">
                 This website has a some subtext under here that goes under the main title. It's a smaller font and is lower contrast
             </p>
             <button>Sign Up</button>
