feat:add style to the header part

--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
     </nav>
     <header class="header">
         <div class="container">
-            <h1>
+            <div class="left">
+            <h1 class="item">
                 This website is awesome
             </h1>
-            <p class="para">
-                This website has a some subtext under here that goes under the main title. It's a smaller font and is lower contrast
+            <p class="para item">
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
             </p>
-            <button>Sign Up</button>
-            <img src="./images/birds.jpg" alt="Image of birds flying in air" width="500">
+            <button class="button item">Sign Up</button>
+            </div>
+            <img src="./images/birds.jpg" alt="Image of birds flying in air" class="big-image">
         </div>
     </header>
    <section class="info">
