feat:add CSS to info section

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
             <div class="title">Some Random Information</div>
             <div class="blocks">
                 <div class="card">
-                    <img src="./images/eagle.jpg" alt="Image of an eagle" width="200">
+                    <img class="image" src="./images/eagle.jpg" alt="Image of an eagle" >
                     <div class="fact">Bald eagles can see four to five times farther than humans.</div>
                 </div>
                 <div class="card">
-                    <img src="./images/kingfisher.jpg" alt="Image of a kingfisher" width="200">
+                    <img class="image" src="./images/kingfisher.jpg" alt="Image of a kingfisher">
                     <div class="fact">Kingfishers can dive into water at high speed without making a splash!</div>
                 </div>
                 <div class="card">
-                    <img src="./images/peacock.jpg" alt="Image of a peacock" width="200">
+                    <img class="image" src="./images/peacock.jpg" alt="Image of a peacock" >
                     <div class="fact">Peacocks don't have blue pigment in their feathers!</div>
                 </div>
                 <div class="card">
-                    <img src="./images/penguins.jpg" alt="Image of penguins" width="200">
+                    <img class="image" src="./images/penguins.jpg" alt="Image of penguins">
                     <div class="fact">Penguins propose with pebbles!</div>
                 </div>
             </div>
