--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
    </section>
    <section class="signup">
         <div class="container">
+            <div class="text">
             <div class="subhead">Call to action! It's time!</div>
-            <div class="subtext">Sign up for our product by clicking the button right over there</div>
+            <div class="subtext">Sign up for our product by clicking the button right over there!</div>
+            </div>
             <button>Sign up</button>
         </div>
    </section>
